# tanakh-analysis

./: .gitmodules  README.md  tanakh.cabal
.github/workflows/: haskell.yml
haskell/app/: Main.hs
haskell/src/: AsciiGraphicSet.hs  Ideas.hs  Shark.hs  Tanakh.hs  Ucd.hs
haskell/src/Shark/: TypeConstructors.hs  TypeDefinitions.hs  Types.hs
haskell/test/: Main.hs  Properties.hs
